--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,7 +12,7 @@
   <meta name="description" content="{{ page.subtitle }}">
   {% endif %}
   <meta name="keywords" content="rupesh, movies,  novels, blog, review, tv, serial, series, word limit, IIT, Bombay, Tower Research Capital">
-  <link rel="shortcut icon" type="image/png" href="https://rs9899.github.io/assets/img/favicon.png" />
+  <link rel="shortcut icon" type="image/png" href="assets/img/favicon.png" />
   
   <link rel="alternate" type="application/rss+xml" title="{{ site.title | default: 'Untitled' }} {{ site.title-separator | default: '-' }} {{ site.description }}" href="{{ '/feed.xml' | absolute_url }}">
   {% include gtag.html %}
